; ModuleID = '/home/carl/AnghaBench/linux/arch/arm/mach-pxa/extr_pcm990-baseboard.c_pcm990_lcd_power.c'
source_filename = "/home/carl/AnghaBench/linux/arch/arm/mach-pxa/extr_pcm990-baseboard.c_pcm990_lcd_power.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fb_var_screeninfo = type { i32 }

@PCM990_CTRL_LCDPWR = common dso_local global i64 0, align 8
@PCM990_CTRL_LCDON = common dso_local global i64 0, align 8
@PCM990_CTRL_REG3 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, %struct.fb_var_screeninfo*)* @pcm990_lcd_power to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pcm990_lcd_power(i32 %0, %struct.fb_var_screeninfo* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.fb_var_screeninfo*, align 8
  store i32 %0, i32* %3, align 4
  store %struct.fb_var_screeninfo* %1, %struct.fb_var_screeninfo** %4, align 8
  %5 = load i32, i32* %3, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %13

7:                                                ; preds = %2
  %8 = load i64, i64* @PCM990_CTRL_LCDPWR, align 8
  %9 = load i64, i64* @PCM990_CTRL_LCDON, align 8
  %10 = add nsw i64 %8, %9
  %11 = load i32, i32* @PCM990_CTRL_REG3, align 4
  %12 = call i32 @pcm990_cpld_writeb(i64 %10, i32 %11)
  br label %16

13:                                               ; preds = %2
  %14 = load i32, i32* @PCM990_CTRL_REG3, align 4
  %15 = call i32 @pcm990_cpld_writeb(i64 0, i32 %14)
  br label %16

16:                                               ; preds = %13, %7
  ret void
}

declare dso_local i32 @pcm990_cpld_writeb(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
